# geocoding

./: CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  regeocode.pc.in
.github/workflows/: quality_security.yml
cli/: main_cli.cpp  reverse_geo.cpp
cmake/: regeocodeConfig.cmake.in
data/: 2026-04-06_Linux_CycloneDx.json  2026-04-06_Linux_depdiscover.html  2026-04-06_Linux_depdiscover.json  2026-04-06_Linux_gh-libs.csv  2026-04-06_Linux_gh-libs.json  re-geocode.ini_example
docs/: ADAPTER_BING.md  ADAPTER_GEONAMES_TIMEZONE.md  ADAPTER_GEONAMES_WIKIPEDIA.md  ADAPTER_GOOGLE.md  ADAPTER_MAREA_TIDES.md  ADAPTER_NOMINATIM.md  ADAPTER_OPENCAGE.md  ADAPTER_OPENWEATHER.md  ADAPTER_POLLUTION.md  ADAPTER_SEAWEATHER.md  ADAPTER_TIDES.md  cmake_example.md  conan_example.md  cxx_example.md  cyclonedx_v1.0.0.json  depdiscover_v1.0.0.html  depdiscover_v1.0.0.json  pkg-config_example.md  quota_status_example.json  re-geocode_example.ini
docs/adapter/: ADAPTERS.md  ADAPTER_BING.md  ADAPTER_COUNTRY.md  ADAPTER_COUNTRY_INFO.md  ADAPTER_GEONAMES_TIMEZONE.md  ADAPTER_GEONAMES_WIKIPEDIA.md  ADAPTER_GOOGLE.md  ADAPTER_MAREA_TIDES.md  ADAPTER_NOMINATIM.md  ADAPTER_OPENCAGE.md  ADAPTER_OPENWEATHER.md  ADAPTER_POLLUTION.md  ADAPTER_SEAWEATHER.md  ADAPTER_TIDES.md
docs/architecture/: ARCHITECTURE.md
docs/cli/: regeocode_cli.md  reverse_geo_batch.md
include/: re_geocode_core.hpp
include/regeocode/: adapter_bing.hpp  adapter_country.hpp  adapter_country_info.hpp  adapter_geonames_timezone.hpp  adapter_geonames_wikipedia.hpp  adapter_google.hpp  adapter_marea_tides.hpp  adapter_nominatim.hpp  adapter_opencage.hpp  adapter_openweather.hpp  adapter_pollution.hpp  adapter_seaweather.hpp  adapter_tides.hpp  api_adapter.hpp  http_client.hpp  quota_manager.hpp  re_geocode_c_api.h  re_geocode_core.hpp
src/: CMakeLists.txt  adapter_bing.cpp  adapter_country.cpp  adapter_country_info.cpp  adapter_geonames_timezone.cpp  adapter_geonames_wikipedia.cpp  adapter_google.cpp  adapter_marea_tides.cpp  adapter_nominatim.cpp  adapter_opencage.cpp  adapter_openweather copy.cpp  adapter_openweather.cpp  adapter_pollution.cpp  adapter_seaweather.cpp  adapter_tides.cpp  http_client.cpp  quota_manager.cpp  re_geocode_c_api.cpp  re_geocode_core.cpp
tests/: CMakeLists.txt  test_country_adapter.cpp  test_country_info.cpp  test_reverse_geocode.cpp
